--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^6.0.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
